Make sure banners on node pages center align once the browser width is too large for edge-to-edge.

--- a/css/style.css.less
+++ b/css/style.css.less
@@ -2295,6 +2295,12 @@ body.node-type-course:not(.has-sidebar) #content{
 	}
 }
 
+//**** View: Redesign Feature Image on Node Page
+#featured .view-redesign-feature-image-on-node-page img {
+  display: block;
+  margin: 0 auto;
+}
+
 //**** Single 'slider', e.g. Front Page Features
 .slide.slide-1 {
 	margin-top:0;
